<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="20sp"
    app:cardElevation="20sp"
    android:layout_gravity="center"
    android:layout_width="300dp"
    android:layout_height="wrap_content">

        <LinearLayout
                android:layout_marginTop="6dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10sp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/circleImage"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/logo"
                    android:src="@drawable/ic_launcher_background" />
                <TextView
                    android:id="@+id/txtName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_marginTop="4dp"
                    android:layout_gravity="center"
                    android:text="@string/email" />

                <TextView
                    android:id="@+id/txtEmail"
                    android:maxLines="3"
                    android:maxLength="26"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/app_name"
                     />
                <View
                    android:layout_marginTop="6dp"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="10dp"
                    android:background="@color/lightGrey"/>
                <Button
                    android:id="@+id/cart"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:drawableStart="@drawable/ic_baseline_history_24"
                    android:text="Appoinments"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    />
                <Button
                    android:id="@+id/shareApp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:drawableStart="@drawable/ic_baseline_share_24"
                    android:text="@string/share"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    />
                <Button
                    android:id="@+id/orderHistory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:drawableStart="@drawable/ic_baseline_exit_to_app_24"
                    android:text="@string/sign_out"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    />

                <View
                    android:layout_marginTop="6dp"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="10dp"
                    android:background="@color/lightGrey"/>

                <LinearLayout

                    android:layout_gravity="center"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="12sp"
                            android:text="@string/privacy_policy"
                            android:id="@+id/pos"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/or"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Terms_of_service"
                            android:textSize="12sp"
                            android:id="@+id/tos"/>
                </LinearLayout>
        </LinearLayout>


</androidx.cardview.widget.CardView>