<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".ApplyActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:id="@+id/appBar"
        android:background="@color/white"
        android:layout_height="?attr/actionBarSize">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/applyBar"
            android:background="@color/white"
            android:backgroundTint="@color/white"
            android:elevation="0dp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.appbar.AppBarLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_gravity="center"
        android:id="@+id/user_image"
        android:layout_marginTop="6dp"
        android:layout_marginStart="6dp"
        android:layout_below="@id/appBar"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:clickable="true"
        android:focusable="true"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_avatar"
        android:contentDescription="@string/user_image" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/patientName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="6dp"
        android:layout_below="@id/appBar"
        android:hint="@string/patient_name"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_toEndOf="@id/user_image"
        app:layout_constraintStart_toStartOf="parent"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textName"
            android:inputType="textPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/patientContact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="6dp"
        android:layout_below="@id/patientName"
        android:hint="@string/mobile_number"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_toEndOf="@id/user_image"
        app:layout_constraintStart_toStartOf="parent"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textContact"
            android:inputType="phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:textColorHint="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/patientAge"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="6dp"
        android:layout_below="@id/user_image"
        android:hint="@string/age"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textAge"
            android:inputType="numberDecimal"
            android:maxLength="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:textColorHint="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/patientAadhar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="6dp"
        android:layout_below="@id/user_image"
        android:hint="@string/patient_aadhar_no"
        app:hintTextColor="@color/black"
        android:layout_toEndOf="@id/patientAge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textAadhar"
            android:inputType="numberDecimal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:textColorHint="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/patientAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="6dp"
        android:layout_below="@id/patientAadhar"
        android:hint="@string/patient_address"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textAdd"
            android:inputType="textPostalAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/patientSymptoms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="6dp"
        android:layout_below="@id/patientAddress"
        android:hint="@string/explain_each_symptoms_in_detail"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textSymp"
            android:inputType="textMultiLine"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:visibility="gone"
        android:layout_toStartOf="@id/submit"
        android:layout_alignParentBottom="true"
        android:id="@+id/progress_bar"
        android:layout_margin="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:backgroundTint="#21a472"
        android:text="@string/submit"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textStyle="bold" />
</RelativeLayout>