<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_centerVertical="true"
        android:contentDescription="@string/app_name"
        android:src="@mipmap/ic_launcher"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <com.google.android.gms.common.SignInButton
        android:id="@+id/signInBtn"
        android:layout_above="@id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"

        />
    <ProgressBar
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_below="@id/signInBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

<LinearLayout
    android:id="@+id/linear"
    android:layout_alignParentBottom="true"
    android:layout_centerHorizontal="true"
    android:layout_width="wrap_content"
    android:layout_marginTop="6dp"
    android:layout_height="wrap_content">
    <TextView
        android:layout_marginEnd="10dp"
        android:id="@+id/PandP"
        android:layout_marginStart="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/privacy_policy"/>
    <TextView
        android:layout_marginEnd="10dp"
        android:id="@+id/slash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"/>
    <TextView
        android:layout_marginEnd="10dp"
        android:id="@+id/TandS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/privacy_policy"/>
</LinearLayout>
</RelativeLayout>