<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"


    android:layout_margin="8dp"
    app:cardCornerRadius="18dp"
    android:elevation="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_width="90dp"
            android:layout_height="100dp"
            android:padding="5dp"
            android:id="@+id/historyImage"
            app:cardCornerRadius="18dp">
            <ImageView
                android:id="@+id/patientProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:scaleType="fitXY"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/backgrounds/scenic" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/hospitalName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:textColor="@color/black"
            android:text="@string/hospital_name"
            android:layout_toEndOf="@id/historyImage"/>

        <TextView
            android:id="@+id/patientName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="6dp"
            android:text="PatientName"
            android:layout_below="@id/hospitalName"
            android:layout_toEndOf="@id/historyImage"/>
        <TextView
            android:id="@+id/patientContact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="6dp"
            android:text="@string/common_open_on_phone"
            android:layout_below="@id/patientName"
            android:layout_toEndOf="@id/historyImage"/>
        <TextView
            android:id="@+id/status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:textStyle="bold"
            android:layout_marginTop="6dp"
            android:text="@string/status"
            android:layout_below="@id/patientContact"
            android:layout_toEndOf="@id/historyImage"/>

    </RelativeLayout>
</androidx.cardview.widget.CardView>